fixed spacing between projects

--- a/zisfansite/src/components/Home.css
+++ b/zisfansite/src/components/Home.css
@@ -5,7 +5,7 @@
 
 .HomePage {
     text-align: center;
-    width: 45vw;
+    width: 55vw;
     margin: auto;
 }
 
