--- a/zisfansite/src/components/Projects.css
+++ b/zisfansite/src/components/Projects.css
@@ -1,3 +1,4 @@
 .ProjectTitle {
     text-align: left;
+    padding-bottom: 1%;
 }
